[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptify"
dynamic = ["version"]
description = "Task-based NLP engine with Pydantic structured outputs and LiteLLM backend"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Promptify Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "litellm>=1.50.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
eval = [
    "rouge-score>=0.1",
    "nltk>=3.8",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/promptslab/Promptify"
Documentation = "https://github.com/promptslab/Promptify"
Repository = "https://github.com/promptslab/Promptify"

[tool.hatch.version]
path = "promptify/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["promptify"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
